gccida/c3/estimate_probability
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:805:1: error: must use 'enum' tag to refer to type 'br_predictor'
br_predictor v20; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:850:1: error: must use 'enum' tag to refer to type 'br_predictor'
br_predictor v65; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:859:6: error: use of undeclared identifier 'v74'
rtx *v74; // r13 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:860:4: error: expected ';' after expression
rtx v75; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:860:5: error: use of undeclared identifier 'v75'
rtx v75; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:862:4: error: expected ';' after expression
rtx v77; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:862:5: error: use of undeclared identifier 'v77'
rtx v77; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:922:4: error: expected ';' after expression
rtx earliest; // [rsp+8h] [rbp-60h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:922:5: error: use of undeclared identifier 'earliest'
rtx earliest; // [rsp+8h] [rbp-60h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:926:4: error: expected ';' after expression
rtx reg_note; // [rsp+28h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:926:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // [rsp+28h] [rbp-40h] 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:927:6: error: use of undeclared identifier 'v142'
rtx *v142; // [rsp+30h] [rbp-38h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:935:15: error: expected identifier or '('
 struct loops = loops_info; 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:1054:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v36.rtwint = ( __int64)dest->end[1].fld[0]; 
                       ^~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:1071:39: error: use of undeclared identifier 'earliest'
condition_0 = get_condition_0( jump, &earliest); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:1090:16: error: must use 'enum' tag to refer to type 'mode_class'
v40 = *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)rtx >> 14) & 0x3FC)); 
               ^
               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:1090:40: error: use of undeclared identifier 'mode_class_0'
v40 = *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)rtx >> 14) & 0x3FC)); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:1097:12: error: expected ')'
if ( ( rtx)condition_0[1] == const_int_rtx[64] || rtx == const_int_rtx[64] ) 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:1097:4: note: to match this '('
if ( ( rtx)condition_0[1] == const_int_rtx[64] || rtx == const_int_rtx[64] ) 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/predict.c:1105:16: error: must use 'enum' tag to refer to type 'mode_class'
v43 = *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)v42 >> 14) & 0x3FC)); 
               ^
               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/estimate_probability/src/obj/predict.o] Error 1
